[gd_scene load_steps=18 format=2]

[ext_resource path="res://Prefabs/Player/Sprites/running6.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://CanvasLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/Player/Sprites/running5.png" type="Texture" id=4]
[ext_resource path="res://Prefabs/Player/Sprites/idle1.png" type="Texture" id=5]
[ext_resource path="res://Prefabs/Player/Sprites/running3.png" type="Texture" id=6]
[ext_resource path="res://Prefabs/Player/Sprites/running1.png" type="Texture" id=7]
[ext_resource path="res://Prefabs/Player/Sprites/running2.png" type="Texture" id=8]
[ext_resource path="res://Prefabs/Player/Sprites/running4.png" type="Texture" id=9]
[ext_resource path="res://Prefabs/Player/Sprites/fighting4.png" type="Texture" id=10]
[ext_resource path="res://Prefabs/Player/Sprites/fighting3.png" type="Texture" id=11]
[ext_resource path="res://Prefabs/Player/Sprites/fighting2.png" type="Texture" id=12]
[ext_resource path="res://Prefabs/Player/Sprites/fighting1.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 18 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "running",
"speed": 8.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "punch",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.63898, 18.3482 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.13243 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 2 )
animation = "punch"
frame = 2
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="feet" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="feet"]
position = Vector2( 0, 22 )
shape = SubResource( 3 )

[node name="ST_Regen" type="Timer" parent="."]

[node name="HP_Regen" type="Timer" parent="."]

[node name="CanvasLayer" parent="." instance=ExtResource( 3 )]

[node name="attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2( 16, 0.25 )
shape = SubResource( 4 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="feet" to="." method="_on_feet_body_entered"]
[connection signal="body_exited" from="feet" to="." method="_on_feet_body_exited"]
[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
